--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,12 @@ footer{
   padding: 15% 0 2% 0;
 }
 
+@media (max-width:1366px) {
+  .second-row{
+    padding-bottom: 203px;
+  }
+}
+
 @media (max-width:1319px) {
   .carousel-controls{
     top: auto;
